--- a/resources/views/service-alert.phtml
+++ b/resources/views/service-alert.phtml
@@ -1,19 +1,11 @@
-<?php
-
-$args = [
-	'post_type' => 'service_alerts',
-	'posts_per_page' => -1,
-];
-$service_alert_query = new WP_Query($args);
-?>
-
-<?php if($service_alert_query->have_posts()): ?>
+<?php if($service_alert->have_posts()): ?>
 
 	<div class="psrm-service-alerts" id="psrm-service-marquee">
 	<ul>
-	<?php while($service_alert_query->have_posts()): $service_alert_query->the_post(); ?>
+	<?php while($service_alert->have_posts()): $service_alert->the_post(); ?>
+        <?php $term = get_the_terms(get_the_ID(), 'alert_categories'); ?>
 		<li><a href="<?php the_permalink(); ?>">
-			<?php the_title('<strong>', '</strong>'); ?>
+			<?php echo get_the_terms(get_the_ID(), 'alert_categories')[0]->name . ': '; the_title('<strong>', '</strong>'); ?>
 		</a></li>
 	<?php endwhile; ?>
 	<?php wp_reset_postdata(); ?>
