--- a/resources/views/settings.phtml
+++ b/resources/views/settings.phtml
@@ -23,7 +23,7 @@ extract($vars);
 		?>
 	</h2>
 
-	<form method="post" action="options.php">
+	<form method="post" action="options.php" class="psrm-settings">
 
 		<?php
 			settings_fields($settingsModel->getSettingsKey());
