--- a/resources/views/donation-form.phtml
+++ b/resources/views/donation-form.phtml
@@ -10,32 +10,48 @@
 			<div class="modal-body">
 				<form class="anet-donation" autocomplete="on">
 					<div class="form-group">
-						<label for="amount" class="control-label sr-only"">Amount:</label>
-						<div class="input-group">
-							<div class="input-group-addon fa fa-usd"></div>
-							<input type="text" class="form-control" id="amount" placeholder="Amount">
-							<div class="input-group-addon">USD</div>
+						<label for="amount">Choose Amount:</label>
+
+						<div class="row">
+							<?php foreach ( $donation_amounts as $key => $amount ): ?>
+								<div class="col-sm-4">
+									<input type="radio" class="donation_amount_form" id="amount<?php echo $key; ?>"
+									       name="amount"
+									       value="<?php echo $key; ?>">&nbsp;<label
+										for="amount<?php echo $key; ?>">$<?php echo $amount; ?></label>
+								</div>
+							<?php endforeach; ?>
 						</div>
+						<?php if ( $allow_custom_amount ): ?>
+							<input type="radio" class="donation_amount_form" id="amount_custom" name="amount"
+							       value="custom">&nbsp;<label for="amount_custom">Custom</label>
+							<div class="input-group custom-donation-group hidden">
+								<div class="input-group-addon fa fa-usd"></div>
+								<input type="text" class="form-control" id="custom_amount" name="custom_amount" placeholder="Amount">
+
+								<div class="input-group-addon">USD</div>
+							</div>
+						<?php endif; ?>
 					</div>
 					<div class="form-group">
-						<label for="cc_num" class="control-label sr-only"">Credit Card Number:</label>
+						<label for="cc_num" class="control-label sr-only">Credit Card Number:</label>
 						<div class="input-group">
 							<div class="input-group-addon fa fa-credit-card"></div>
 							<input type="tel" class="form-control" id="cc_num" placeholder="Credit Card Number">
 						</div>
-						<label for="expiration" class="control-label sr-only"">Expiration:</label>
+						<label for="expiration" class="control-label sr-only">Expiration:</label>
 						<div class="input-group expiration-group">
 							<div class="input-group-addon fa fa-calendar"></div>
 							<input type="tel" class="form-control" id="expiration" placeholder="MM/YYYY">
 						</div>
-						<label for="cvc" class="control-label sr-only"">CVC:</label>
+						<label for="cvc" class="control-label sr-only">CVC:</label>
 						<div class="input-group cvc-group">
 							<div class="input-group-addon fa fa-lock"></div>
 							<input type="tel" class="form-control" id="cvc" placeholder="CVC" autocomplete="off">
 						</div>
 					</div>
 					<div class="form-group">
-						<label for="email" class="control-label sr-only"">Email:</label>
+						<label for="email" class="control-label sr-only">Email:</label>
 						<div class="input-group">
 							<div class="input-group-addon fa fa-envelope"></div>
 							<input type="text" class="form-control" id="email" placeholder="Email Address">
@@ -44,12 +60,12 @@
 					<hr/>
 					<div class="small">The following is optional and is only needed if you want a donation receipt mailed to you.</div>
 					<div class="form-group">
-						<label for="name" class="control-label sr-only"">Name on Card:</label>
+						<label for="name" class="control-label sr-only">Name on Card:</label>
 						<div class="input-group">
 							<div class="input-group-addon fa fa-user"></div>
 							<input type="text" class="form-control" id="name" placeholder="Name on Card">
 						</div>
-						<label for="address" class="control-label sr-only"">Address:</label>
+						<label for="address" class="control-label sr-only">Address:</label>
 						<div class="input-group">
 							<div class="input-group-addon fa fa-pencil"></div>
 							<input type="text" class="form-control" id="address" placeholder="Address">
