--- a/resources/views/donation-form.phtml
+++ b/resources/views/donation-form.phtml
@@ -50,25 +50,38 @@
 							<input type="tel" class="form-control" id="cvc" placeholder="CVC" autocomplete="off">
 						</div>
 					</div>
+					<div class="small">Enter your billing information below:</div>
 					<div class="form-group">
 						<label for="email" class="control-label sr-only">Email:</label>
 						<div class="input-group">
 							<div class="input-group-addon fa fa-envelope"></div>
 							<input type="text" class="form-control" id="email" placeholder="Email Address">
 						</div>
-					</div>
-					<hr/>
-					<div class="small">The following is optional and is only needed if you want a donation receipt mailed to you.</div>
-					<div class="form-group">
 						<label for="name" class="control-label sr-only">Name on Card:</label>
 						<div class="input-group">
 							<div class="input-group-addon fa fa-user"></div>
-							<input type="text" class="form-control" id="name" placeholder="Name on Card">
+							<input type="text" class="form-control" id="first_name" placeholder="First Name on Card">
+							<input type="text" class="form-control" id="last_name" placeholder="Last Name on Card">
 						</div>
-						<label for="address" class="control-label sr-only">Address:</label>
+						<label for="address" class="control-label sr-only">Billing Address:</label>
 						<div class="input-group">
 							<div class="input-group-addon fa fa-pencil"></div>
-							<input type="text" class="form-control" id="address" placeholder="Address">
+							<input type="text" class="form-control" id="address" placeholder="Billing Address">
+						</div>
+						<label for="city" class="control-label sr-only">City:</label>
+						<div class="input-group">
+							<div class="input-group-addon fa fa-pencil"></div>
+							<input type="text" class="form-control" id="city" placeholder="City">
+						</div>
+						<label for="state" class="control-label sr-only">State:</label>
+						<div class="input-group">
+							<div class="input-group-addon fa fa-pencil"></div>
+							<input type="text" class="form-control" id="state" placeholder="State">
+						</div>
+						<label for="zip" class="control-label sr-only">Zip:</label>
+						<div class="input-group">
+							<div class="input-group-addon fa fa-pencil"></div>
+							<input type="text" class="form-control" id="zip" placeholder="Zip Code">
 						</div>
 					</div>
 					<input type="submit" value="Make Donation" class="btn btn-primary">
