--- a/resources/style/front/donation.scss
+++ b/resources/style/front/donation.scss
@@ -1,4 +1,11 @@
 .gump-error-message {
   display: block;
-  margin-bottom: 5px;
+  margin: 10px 0;
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: red;
+}
+
+.modal-body {
+  font-size: 2rem;
 }
