--- a/resources/views/donation-form.phtml
+++ b/resources/views/donation-form.phtml
@@ -1,93 +1,48 @@
-<button type="button" class="btn btn-primary btn-lg donation-button" data-toggle="modal" data-target=".bs-example-modal-sm" onclick="ga('send', 'event', 'Donate Button', 'Click', 'Donation Page');">☺ Donate Today</button>
+<div class="form-group">
+	<label for="amount">Choose Amount:</label>
 
-<div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+	<div class="row">
+		<?php foreach ( $donation_amounts as $key => $amount ): ?>
+			<div class="col-sm-4">
+				<input type="radio" class="donation_amount_form" id="amount<?php echo $key; ?>"
+				       name="amount"
+				       data-amount="<?php echo $amount; ?>"
+				       value="<?php echo $key; ?>">&nbsp;<label
+					for="amount<?php echo $key; ?>">$<?php echo $amount; ?></label>
+			</div>
+		<?php endforeach; ?>
+	</div>
+	<?php if ( $allow_custom_amount ): ?>
+		<input type="radio" class="donation_amount_form" id="amount_custom" name="amount"
+		       value="custom">&nbsp;<label for="amount_custom">Custom</label>
+		<div class="input-group custom-donation-group hidden">
+			<div class="input-group-addon fa fa-usd"></div>
+			<input type="text" class="form-control" id="custom_amount" name="custom_amount" placeholder="Amount">
+
+			<div class="input-group-addon">USD</div>
+		</div>
+	<?php endif; ?>
+</div>
+<div class="donate-button-error"></div>
+<button type="button" class="btn btn-primary btn-lg donation-button" onclick="ga('send', 'event', 'Donate Button', 'Click', 'Donation Page');">☺
+	Donate Today
+</button>
+
+
+<div class="modal fade bs-example-modal-sm donation-modal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel"
+     aria-hidden="true">
 	<div class="modal-dialog modal-sm">
 		<div class="modal-content">
 			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-				<div class="aligncenter">Make A One-Time Donation to Pacific Southwest Railway Museum</div>
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+						aria-hidden="true">&times;</span></button>
+				<div class="aligncenter">Processing Donation</div>
 			</div>
 			<div class="modal-body">
-				<form class="anet-donation" autocomplete="on">
-					<div class="form-group">
-						<label for="amount">Choose Amount:</label>
 
-						<div class="row">
-							<?php foreach ( $donation_amounts as $key => $amount ): ?>
-								<div class="col-sm-4">
-									<input type="radio" class="donation_amount_form" id="amount<?php echo $key; ?>"
-									       name="amount"
-									       value="<?php echo $key; ?>">&nbsp;<label
-										for="amount<?php echo $key; ?>">$<?php echo $amount; ?></label>
-								</div>
-							<?php endforeach; ?>
-						</div>
-						<?php if ( $allow_custom_amount ): ?>
-							<input type="radio" class="donation_amount_form" id="amount_custom" name="amount"
-							       value="custom">&nbsp;<label for="amount_custom">Custom</label>
-							<div class="input-group custom-donation-group hidden">
-								<div class="input-group-addon fa fa-usd"></div>
-								<input type="text" class="form-control" id="custom_amount" name="custom_amount" placeholder="Amount">
-
-								<div class="input-group-addon">USD</div>
-							</div>
-						<?php endif; ?>
-					</div>
-					<div class="form-group">
-						<label for="cc_num" class="control-label sr-only">Credit Card Number:</label>
-						<div class="input-group">
-							<div class="input-group-addon fa fa-credit-card"></div>
-							<input type="tel" class="form-control" id="cc_num" placeholder="Credit Card Number">
-						</div>
-						<label for="expiration" class="control-label sr-only">Expiration:</label>
-						<div class="input-group expiration-group">
-							<div class="input-group-addon fa fa-calendar"></div>
-							<input type="tel" class="form-control" id="expiration" placeholder="MM/YYYY">
-						</div>
-						<label for="cvc" class="control-label sr-only">CVC:</label>
-						<div class="input-group cvc-group">
-							<div class="input-group-addon fa fa-lock"></div>
-							<input type="tel" class="form-control" id="cvc" placeholder="CVC" autocomplete="off">
-						</div>
-					</div>
-					<div class="small">Enter your billing information below:</div>
-					<div class="form-group">
-						<label for="email" class="control-label sr-only">Email:</label>
-						<div class="input-group">
-							<div class="input-group-addon fa fa-envelope"></div>
-							<input type="text" class="form-control" id="email" placeholder="Email Address">
-						</div>
-						<label for="name" class="control-label sr-only">Name on Card:</label>
-						<div class="input-group">
-							<div class="input-group-addon fa fa-user"></div>
-							<input type="text" class="form-control" id="first_name" placeholder="First Name on Card">
-							<input type="text" class="form-control" id="last_name" placeholder="Last Name on Card">
-						</div>
-						<label for="address" class="control-label sr-only">Billing Address:</label>
-						<div class="input-group">
-							<div class="input-group-addon fa fa-pencil"></div>
-							<input type="text" class="form-control" id="address" placeholder="Billing Address">
-						</div>
-						<label for="city" class="control-label sr-only">City:</label>
-						<div class="input-group">
-							<div class="input-group-addon fa fa-pencil"></div>
-							<input type="text" class="form-control" id="city" placeholder="City">
-						</div>
-						<label for="state" class="control-label sr-only">State:</label>
-						<div class="input-group">
-							<div class="input-group-addon fa fa-pencil"></div>
-							<input type="text" class="form-control" id="state" placeholder="State">
-						</div>
-						<label for="zip" class="control-label sr-only">Zip:</label>
-						<div class="input-group">
-							<div class="input-group-addon fa fa-pencil"></div>
-							<input type="text" class="form-control" id="zip" placeholder="Zip Code">
-						</div>
-					</div>
-					<input type="submit" value="Make Donation" class="btn btn-primary">
-				</form>
 			</div>
-			<div class="modal-footer"></div>
 		</div>
 	</div>
 </div>
+<div class="donation-analytics"></div>
+<script type="text/javascript" src="https://checkout.stripe.com/checkout.js"></script>
