--- a/resources/views/settings-donations.phtml
+++ b/resources/views/settings-donations.phtml
@@ -1,25 +1,36 @@
 <?php extract($vars); ?>
 
-<h3>Authorize.net Settings</h3>
+<h3>Stripe Settings</h3>
 
 <table class='form-table'>
 	<tr>
-		<th scope="row">API Login ID:</th>
+		<th scope="row"><label for="stripe-secret-key">Secret Key:</label></th>
 
 		<td>
-			<input type='text' class='regular-text' id='authorize-net-api-id' value='<?php echo $settingsModel->getOption('authorize_net_api_id', $current_tab) ?>'
-			       name='<?php echo $settingsModel->getInputName('authorize_net_api_id', $current_tab) ?>' />
+			<input type='text' class='regular-text' id='stripe-secret-key' value='<?php echo $settingsModel->getOption('stripe_secret_key', $current_tab) ?>'
+			       name='<?php echo $settingsModel->getInputName('stripe_secret_key', $current_tab) ?>' />
 
 		</td>
 
 	</tr>
 
 	<tr>
-		<th scope="row">Transaction Key</th>
+		<th scope="row"><label for="stripe-public-key">Public Key</label></th>
 
 		<td>
-			<input type='text' class='regular-text' id='authorize-net-transaction-key' value='<?php echo $settingsModel->getOption('authorize_net_transaction_key', $current_tab) ?>'
-			       name='<?php echo $settingsModel->getInputName('authorize_net_transaction_key', $current_tab) ?>' />
+			<input type='text' class='regular-text' id='stripe-public-key' value='<?php echo $settingsModel->getOption('stripe_public_key', $current_tab) ?>'
+			       name='<?php echo $settingsModel->getInputName('stripe_public_key', $current_tab) ?>' />
+
+		</td>
+
+	</tr>
+
+	<tr>
+		<th scope="row"><label for="checkout-image-url">Checkout Image URL</label></th>
+
+		<td>
+			<input type='text' class='regular-text' id='checkout-image-url' value='<?php echo $settingsModel->getOption('checkout_image_url', $current_tab) ?>'
+			       name='<?php echo $settingsModel->getInputName('checkout_image_url', $current_tab) ?>' />
 
 		</td>
 
