#15 - Fix a couple misspellings in the donation controller. Remove the smiley face on the donation button.

--- a/resources/views/donation-form.phtml
+++ b/resources/views/donation-form.phtml
@@ -24,7 +24,7 @@
 	<?php endif; ?>
 </div>
 <div class="donate-button-error"></div>
-<button type="button" class="btn btn-primary btn-lg donation-button" onclick="ga('send', 'event', 'Donate Button', 'Click', 'Donation Page');">☺
+<button type="button" class="btn btn-primary btn-lg donation-button" onclick="ga('send', 'event', 'Donate Button', 'Click', 'Donation Page');">
 	Donate Today
 </button>
 
