#15 - Remove errant console.log.

--- a/resources/style/front/donation.scss
+++ b/resources/style/front/donation.scss
@@ -10,6 +10,9 @@
   padding-right: 0;
 }
 
-.modal-body {
-  font-size: 2rem;
+.donation-modal {
+  color: #000;
+  .modal-body {
+    font-size: 2rem;
+  }
 }
