--- a/resources/views/settings-donations.phtml
+++ b/resources/views/settings-donations.phtml
@@ -40,7 +40,7 @@
 
 	<h3>Donation Amounts</h3>
 
-	<ul class="donation-amounts editable">
+	<ul class="donation-amounts" id="editable">
 		<?php if ( $donations = $settingsModel->getOption( 'donation_amounts', $current_tab ) ):
 			$donation_option_name = $settingsModel->getInputName( 'donation_amounts', $current_tab );
 			foreach ( $donations as $amount ): ?>
@@ -62,13 +62,13 @@
 </p>
 
 	<h3>Emails</h3>
-	<ul class="email-successful-donation editable">
+	<ul class="email-successful-donation">
 		<?php if ( $emails = $settingsModel->getOption( 'email_successful_donation', $current_tab ) ):
 			$email_option_name = $settingsModel->getInputName( 'email_successful_donation', $current_tab );
 			foreach ( $emails as $email ): ?>
 				<li><input type="hidden" name="<?php echo $email_option_name; ?>[]" value="<?php echo $email; ?>">
-					<span title="Drag to reposition" class="drag-handle">&#9776;</span><?php echo $email; ?>
-					<i class="js-remove" title="Click to remove">✖</i></li>
+					<?php echo $email; ?>
+					<i class="js-remove-email" title="Click to remove">✖</i></li>
 			<?php endforeach; ?>
 		<?php endif; ?>
 	</ul>
