Remove the popup that would appear when as a donation was being processed

--- a/resources/views/donation-form.phtml
+++ b/resources/views/donation-form.phtml
@@ -36,25 +36,7 @@
 	<?php endif; ?>
 </div>
 <div class="donate-button-error"></div>
-<button type="button" class="btn btn-primary btn-lg donation-button" onclick="ga('send', 'event', 'Donate Button', 'Click', 'Donation Page');">
+<button type="button" class="btn btn-primary btn-lg donation-button">
 	Donate Today
 </button>
-
-
-<div class="modal fade bs-example-modal-sm donation-modal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel"
-     aria-hidden="true">
-	<div class="modal-dialog modal-sm">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-						aria-hidden="true">&times;</span></button>
-				<div class="aligncenter">Processing Donation</div>
-			</div>
-			<div class="modal-body">
-
-			</div>
-		</div>
-	</div>
-</div>
-<div class="donation-analytics"></div>
 <script type="text/javascript" src="https://checkout.stripe.com/checkout.js"></script>
