Fix formatting and add doc blocks for the vars in the setting views

--- a/resources/views/settings-donations.phtml
+++ b/resources/views/settings-donations.phtml
@@ -1,4 +1,7 @@
-<?php extract($vars); ?>
+<?php
+/** @var string $current_tab */
+/** @var psrm\models\Settings $settingsModel */
+?>
 
 <h3>Stripe Settings</h3>
 
