--- a/resources/views/settings-recaptcha.phtml
+++ b/resources/views/settings-recaptcha.phtml
@@ -1,3 +1,8 @@
+<?php
+/** @var string $current_tab */
+/** @var psrm\models\Settings $settingsModel */
+?>
+
 <h3>Google reCAPTCHA Settings</h3>
 
 <table class='form-table'>
