--- a/resources/views/settings-google-places.phtml
+++ b/resources/views/settings-google-places.phtml
@@ -1,8 +1,13 @@
+<?php
+/** @var string $current_tab */
+/** @var psrm\models\Settings $settingsModel */
+?>
+
 <h3>Google Places Settings</h3>
 
 <table class='form-table'>
 	<tr>
-		<th scope="row">Google API Key</th>
+        <th scope="row"><label for="google-places-api-key">Google API Key</label></th>
 
 		<td>
 			<input type='text' class='regular-text' id='google-places-api-key' value='<?php echo $settingsModel->getOption('google_places_api_key', $current_tab) ?>'
@@ -13,7 +18,7 @@
 	</tr>
 
 	<tr>
-		<th scope="row">Google Places ID</th>
+        <th scope="row"><label for="google-places-id">Google Places ID</label></th>
 
 		<td>
 			<input type='text' class='regular-text' id='google-places-id' value='<?php echo $settingsModel->getOption('google_places_id', $current_tab) ?>'
