Add some needed documentation to the views

--- a/resources/views/daily-hours.phtml
+++ b/resources/views/daily-hours.phtml
@@ -1,3 +1,7 @@
+<?php
+/** @var array $args */
+/** @var string $open_hours */
+?>
 <?php echo $args['before_widget'] ?>
     <div class="daily-hours">
         The museum is <?= $open_hours ?>
