--- a/resources/views/donation-form.phtml
+++ b/resources/views/donation-form.phtml
@@ -1,3 +1,9 @@
+<?php
+/** @var array $donation_funds */
+/** @var array $donation_amounts */
+/** @var string $allow_custom_amount */
+/** @var int $custom_donation_floor */
+?>
 <div class="form-group donation-form">
 	<label for="donation_fund">Choose Fund:</label>
 
